--- a/my-farm-app/package.json
+++ b/my-farm-app/package.json
@@ -15,10 +15,14 @@
     "@capacitor-community/barcode-scanner": "^4.0.1",
     "@capacitor/android": "6.1.2",
     "@capacitor/core": "^6.1.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
+    "@mui/material": "^6.1.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "antd": "^5.20.6",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
