--- a/.github/workflows/main_farmserver.yml
+++ b/.github/workflows/main_farmserver.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           node-version: '18.x'
 
+      # Navigate to the backend folder before running npm commands
+      - name: Navigate to backend folder
+        run: cd farm-management-app/backend
+
       - name: npm install, build, and test
         run: |
           npm install
@@ -28,7 +32,7 @@ jobs:
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -40,10 +44,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -53,19 +57,18 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B8AD116A9EEA423FB3CD9562A8C11906 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F3DC2BBF2C8F4EEA9981B317D0C9C9D3 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E1AFC0F8E46F43E78A829DC49C51C9F2 }}
+          client-id: ${{ secrets.__clientidsecretname__ }}
+          tenant-id: ${{ secrets.__tenantidsecretname__ }}
+          subscription-id: ${{ secrets.__subscriptionidsecretname__ }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'farmserver'
-          slot-name: 'Production'
+          slot-name: 'production'
           package: .
-          
